--- a/public/custom/css/karnaugh/newkarnaugh_style.css
+++ b/public/custom/css/karnaugh/newkarnaugh_style.css
@@ -200,3 +200,26 @@ caption,th{
 input::placeholder { /* Chrome/Opera/Safari */
   color: green!
 }
+
+
+div .Step1KMaps{
+    /* To correctly align image, regardless of content height: */
+    vertical-align: top !important;
+    display: inline-block !important;
+    /* To horizontally center images and caption */
+    text-align: center !important;
+    /* The width of the container also implies margin around the images. */
+    width: 200px !important;
+    padding: 5px 10px !important;
+}
+
+img {
+    width: 80%;
+    height: 80%;
+    background-color: grey;
+}
+
+.caption {
+    /* Make the caption a block so it occupies its own line. */
+    display: block;
+}
