--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1403,13 +1403,13 @@ figure {
     margin: 0
 }
 
-img {
-    vertical-align: middle
-}
-
 .img-responsive {
     display: block;
-    max-width: 100%;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 2%;
     height: auto
 }
 
