--- a/public/custom/css/custom-bootstrap-dashboard.css
+++ b/public/custom/css/custom-bootstrap-dashboard.css
@@ -413,6 +413,15 @@ body > .navbar-collapse .logo .simple-text {
   line-height: 30px;
 }
 
+sidebar .logo .simple-image-logo img,
+body > .navbar-collapse .logo .simple-image-logo img{
+  padding: 5px 0px;
+  max-width: 50%;
+  max-height: 50%;
+  display: plex;
+}
+
+
 .sidebar .logo .simple-subtext,
 body > .navbar-collapse .logo .simple-subtext {
   text-transform: uppercase;
