--- a/public/custom/css/custom-bootstrap-dashboard.css
+++ b/public/custom/css/custom-bootstrap-dashboard.css
@@ -1153,7 +1153,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   border-bottom-width: 1px;
   font-size: 12px;
   text-transform: uppercase;
-  color: #9A9A9A;
+  color: #f5f5f5;
   font-weight: 400;
   padding-bottom: 5px;
 }
